Fixed: Modal not showing in the text editor Added: cURL for better handling the API
git-svn-id: https://plugins.svn.wordpress.org/open-rdw-kenteken-voertuiginformatie/trunk@1163179 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/resources/admin.css
+++ b/resources/admin.css
@@ -114,11 +114,11 @@
 
 .open-rdw-modal-background {
 	position: fixed;
-	z-index:100;
+	z-index: 2000;
 	top: 0px;
 	left: 0px;
-	height:100%;
-	width:100%;
+	height: 100%;
+	width: 100%;
 	background-color: rgba(0, 0, 0, 0.4);
 	display: none;
 }
